<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/gray"
              android:minWidth="300dp">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/tarjeta"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@color/dark_blue" />

        <EditText
            android:id="@+id/etCi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:padding="7dp"
            android:background="@drawable/edt_white_curve"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:enabled="true"
            android:gravity="right"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/seguridad"
            android:textColor="@color/dark_blue"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"/>

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:background="@drawable/edt_white_curve"
            android:enabled="true"
            android:gravity="right"
            android:inputType="text"
            android:padding="7dp"
            android:selectAllOnFocus="true" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/monto"
            android:textColor="@color/dark_blue"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"/>

        <EditText
            android:id="@+id/etEdad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:padding="7dp"
            android:text="@string/ceroAmount"
            android:background="@drawable/edt_white_curve"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:enabled="true"
            android:gravity="right"/>
    </TableRow>

    <TableRow
            style="android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@color/blue"
            android:padding="0dp"
            android:weightSum="1">

        <Button
                android:id="@+id/cancel"
                style="android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_red"
                android:layout_weight="0.5"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/white"/>

        <Button
                android:id="@+id/save"
                style="android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/btn_green"
                android:padding="5dp"
                android:text="@string/save"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@color/white"/>
    </TableRow>

</LinearLayout>